chore(#1175): minor adjustments on imports and code style